fix: benerin buffer dan sedikit binguung sama vercel nya

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "uploads",
   "module": "index.ts",
+  "src": "index.ts",
   "type": "module",
   "devDependencies": {
     "@types/bun": "latest"
