--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "type": "module",
   "scripts": {
     "build": "bun-vercel index.ts",
-    "buildCommand": "bun run build",
     "start": "bun run index.ts"
   },
   "devDependencies": {
@@ -15,6 +14,6 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
-    "bun-vercel": "^1.0.0-alpha.5"
+    "bun": "^1.2.14"
   }
 }
