fix: vercel deploy with Switch to edge function

--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
-    "bun": "^1.2.14",
-    "bun-vercel": "^1.0.0-alpha.5"
+    "bun": "^1.2.14"
   }
 }
